# jup-python-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-dev.md  README-release.md  README.md  check_code.sh  pyproject.toml
.github/workflows/: ci-uv.yml  ci.yml  release-uv.yml  release.yml
examples/advanced/: concurrent_example.py  proxy_example.py
examples/balances/: async_main.py  main.py
examples/order-and-execute/: async_main.py  main.py
examples/shield/: async_main.py  main.py
jup_ag_sdk/: client.py
jup_ag_sdk/clients/: jupiter_client.py  swap_api_client.py  ultra_api_client.py
jup_ag_sdk/models/swap_api/: quote_request_model.py  swap_request_model.py
jup_ag_sdk/models/ultra_api/: ultra_execute_request_model.py  ultra_order_request_model.py
jup_python_sdk/clients/: jupiter_client.py  ultra_api_client.py
jup_python_sdk/models/common/: dex_enum.py
jup_python_sdk/models/ultra_api/: ultra_execute_request_model.py  ultra_order_request_model.py
tests/: test_client.py  test_client_functionality.py  test_swap_client.py  test_ultra_balances.py  test_ultra_client.py  test_ultra_order_and_execute.py  test_ultra_shield.py
