[project]
name = "solanab-jup-python-sdk"
version = "2.0.6"
description = "High-performance sync/async Python SDK for Jupiter Exchange APIs, powered by curl_cffi."
authors = [
    { name = "Fiji", email = "charismoutafidis@gmail.com" },
    { name = "solanab", email = "whiredj@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["solana", "jupiter", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.11.3",
    "curl-cffi>=0.12",
    "solders>=0.26.0",
    "base58>=2.1.1",
]

[project.urls]
homepage = "https://github.com/solanab/jup-python-sdk"
repository = "https://github.com/solanab/jup-python-sdk"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest-cov>=6.1.1",
    "bandit>=1.7",
    "pytest-asyncio>=0.23.7",
    "pip-audit>=2.8.0",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jup_python_sdk"]



[tool.mypy]
strict = true
disallow_untyped_defs = true
disable_error_code = ["annotation-unchecked"]


[tool.ruff]
line-length = 88
target-version = "py39"
# Support all Python versions from 3.9 to 3.13

[tool.ruff.lint]
select = ["E", "F", "B", "I", "S", "UP"]
ignore = ["S101"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix-style line endings
line-ending = "lf"
